# evaldeck-py

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  docs.yaml  publish.yaml
docs/: index.md
docs/api/: config.md  evalcase.md  evaluation-result.md  evaluator.md  grade-result.md  index.md  metrics.md  step.md  trace.md
docs/api/graders/: base.md  code.md  llm.md
docs/concepts/: architecture.md  evaluation-workflow.md  grading-strategies.md  index.md  traces.md
docs/contributing/: adding-graders.md  adding-integrations.md  adding-metrics.md  code-standards.md  index.md  setup.md
docs/examples/: basic-usage.md  index.md  langchain-agent.md  llm-judge.md  tool-calls.md
docs/getting-started/: first-evaluation.md  index.md  installation.md  quickstart.md
docs/includes/: abbreviations.md
docs/stylesheets/: extra.css
docs/user-guide/: ci-cd.md  cli.md  configuration.md  index.md  metrics.md  test-cases.md
docs/user-guide/graders/: code-based.md  custom.md  index.md  llm-based.md
docs/user-guide/integrations/: index.md  manual.md  opentelemetry.md
examples/: basic_usage.py  langchain_react_agent.py
src/evaldeck/: __init__.py  cli.py  config.py  evaluator.py  results.py  test_case.py  trace.py
src/evaldeck/graders/: __init__.py  base.py  code.py  llm.py
src/evaldeck/integrations/: __init__.py  langchain.py  opentelemetry.py
src/evaldeck/metrics/: __init__.py  base.py  builtin.py
tests/: __init__.py  conftest.py  test_evaluator.py  test_graders.py  test_trace.py
